--- a/config/crd/bases/cache.example.com_bhagyatests.yaml
+++ b/config/crd/bases/cache.example.com_bhagyatests.yaml
@@ -54,7 +54,7 @@ spec:
               nodes:
                 description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
                   of cluster Important: Run "make" to regenerate code after modifying
-                  this file Nodes are the names of the bhagya pods'
+                  this file Nodes are the names of the bhagyaF pods'
                 items:
                   type: string
                 type: array
