Add CRD for helm chart install

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -45,6 +45,32 @@ rules:
   - patch
   - update
 - apiGroups:
+  - cache.example.com
+  resources:
+  - helmcharts
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - cache.example.com
+  resources:
+  - helmcharts/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - cache.example.com
+  resources:
+  - helmcharts/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
   - ""
   resources:
   - pods
