--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -21,7 +21,7 @@ rules:
 - apiGroups:
   - cache.example.com
   resources:
-  - bhagyas
+  - bhagyatests
   verbs:
   - create
   - delete
@@ -33,13 +33,13 @@ rules:
 - apiGroups:
   - cache.example.com
   resources:
-  - bhagyas/finalizers
+  - bhagyatests/finalizers
   verbs:
   - update
 - apiGroups:
   - cache.example.com
   resources:
-  - bhagyas/status
+  - bhagyatests/status
   verbs:
   - get
   - patch
