--- a/config/rbac/custom_role.yaml
+++ b/config/rbac/custom_role.yaml
@@ -1,8 +1,8 @@
-#apiVersion: v1
-#kind: ServiceAccount
-#metadata:
-#  name: controller-manager
-#  namespace: system
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: bhagya-manager
+  namespace: system
 
 ---
 apiVersion: security.openshift.io/v1
@@ -34,7 +34,7 @@ fsGroup:
 supplementalGroups:
   type: RunAsAny
 users:
-  - system:serviceaccount:bhagya-operator-system:bhagya-operator-controller-manager
+  - system:serviceaccount:bhagya-operator-system:bhagya-operator-bhagya-manager
 groups: []
 
 ---
@@ -115,5 +115,5 @@ roleRef:
   name: role
 subjects:
   - kind: ServiceAccount
-    name: controller-manager
+    name: bhagya-manager
     namespace: system
