--- a/config/rbac/custom_role.yaml
+++ b/config/rbac/custom_role.yaml
@@ -44,23 +44,16 @@ metadata:
   creationTimestamp: null
   name: role
 rules:
-- apiGroups:
-    - apps
-  resources:
-    - deployments
-  verbs:
-    - create
-    - delete
-    - get
-    - list
-    - patch
-    - update
-    - watch
+#- apiGroups:
+#    - apps
+#  resources:
+#    - deployments
+#  verbs:
+#    - '*'
 - apiGroups:
     - cache.example.com
   resources:
-    - helmcharts
-    - pods
+    - '*'
   verbs:
     - create
     - delete
@@ -83,26 +76,102 @@ rules:
     - get
     - patch
     - update
+#- apiGroups:
+#    - "security.openshift.io"
+#  resources:
+#    - securitycontextconstraints
+#  verbs:
+#    - get
+#    - create
 - apiGroups:
     - ""
   resources:
-    - helmcharts
     - pods
+    - services
+    - endpoints
+    - persistentvolumeclaims
+    - events
+    - configmaps
+    - secrets
+    - helmcharts
   verbs:
-    - create
-    - delete
-    - get
-    - list
-    - patch
-    - update
-    - watch
+    - '*'
 - apiGroups:
-    - "security.openshift.io"
+    - ""
   resources:
-    - securitycontextconstraints
+    - namespaces
+  verbs:
+    - get
+- apiGroups:
+      - "coordination.k8s.io"
+    resources:
+      - leases
+    verbs:
+      - get
+- apiGroups:
+    - apps
+  resources:
+    - deployments
+    - daemonsets
+    - replicasets
+    - statefulsets
+  verbs:
+    - '*'
+- apiGroups:
+    - monitoring.coreos.com
+  resources:
+    - servicemonitors
   verbs:
     - get
     - create
+- apiGroups: [""]
+  resources: ["persistentvolumeclaims"]
+  verbs: ["get", "list", "watch", "update"]
+- apiGroups: [""]
+  resources: ["persistentvolumes"]
+  verbs: ["get", "list", "watch", "update", "create", "delete"]
+- apiGroups: [""]
+  resources: ["events"]
+  verbs: ["list", "watch", "create", "update", "patch"]
+- apiGroups: ["storage.k8s.io"]
+  resources: ["storageclasses"]
+  verbs: ["create", "get", "list", "watch", "delete"]
+- apiGroups: [""]
+  resources: ["nodes"]
+  verbs: ["get", "list", "watch"]
+- apiGroups: [""]
+  resources: ["configmaps"]
+  verbs: ["get", "list", "watch"]
+- apiGroups: [""]
+  resources: ["endpoints"]
+  verbs: ["get", "list", "watch", "create", "update", "patch"]
+- apiGroups: []
+  nonResourceURLs: ["/version"]
+  verbs: ["get"]
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["get"]
+- apiGroups: ["extensions"]
+  resources: ["deployments"]
+  verbs: [ "create", "get", "list", "watch", "delete"]
+- apiGroups: ["extensions"]
+  resources: ["daemonsets"]
+  verbs: [ "create", "get", "list", "watch", "delete"]
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources: ["clusterrolebindings"]
+  verbs: ["create", "patch", "get", "watch", "list", "delete"]
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources: ["clusterroles"]
+  verbs: ["create", "patch", "get", "list", "watch", "delete"]
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources: ["rolebindings"]
+  verbs: ["create", "patch", "get", "watch", "list", "delete"]
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources: ["roles"]
+  verbs: ["create", "patch", "get", "list", "watch", "delete"]
+- apiGroups: [""]
+  resources: ["serviceaccounts"]
+  verbs: ["create", "patch", "get", "list", "watch", "delete"]
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
