--- a/config/rbac/custom_role.yaml
+++ b/config/rbac/custom_role.yaml
@@ -34,7 +34,7 @@ fsGroup:
 supplementalGroups:
   type: RunAsAny
 users:
-  - system:serviceaccount:bhagya-operator-system:bhagya-operator-bhagya-manager
+  - system:serviceaccount:system:bhagya-manager
 groups: []
 
 ---
