--- a/config/rbac/custom_role.yaml
+++ b/config/rbac/custom_role.yaml
@@ -121,6 +121,9 @@ rules:
   resources: ["persistentvolumeclaims"]
   verbs: ["get", "list", "watch", "update"]
 - apiGroups: [""]
+  resources: ["helmchart"]
+  verbs: ["get", "list", "watch"]
+- apiGroups: [""]
   resources: ["persistentvolumeclaims/status"]
   verbs: ["update", "patch"]
 - apiGroups: [""]
