--- a/Dockerfile.helmchart
+++ b/Dockerfile.helmchart
@@ -1,6 +1,6 @@
 FROM registry.access.redhat.com/ubi8/ubi-minimal:latest
 WORKDIR /
-RUN   microdnf update && microdnf install -y curl bash tar gzip iputils
+RUN   microdnf update && microdnf install -y curl bash tar gzip openssl
 RUN   curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.18.6/bin/linux/amd64/kubectl && \
       chmod +x ./kubectl &&  mv ./kubectl /usr/local/bin/kubectl
 RUN   curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 && \
