--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -32,10 +32,10 @@ spec:
         image: controller:latest
         name: manager
         securityContext:
-          allowPrivilegeEscalation: true
-          readOnlyRootFilesystem: false
-          runAsNonRoot: false
-          runAsUser: 0
+          allowPrivilegeEscalation: false
+          #readOnlyRootFilesystem: false
+          runAsNonRoot: true
+          #runAsUser: 0
         livenessProbe:
           httpGet:
             path: /healthz
