--- a/config/rbac/custom_role.yaml
+++ b/config/rbac/custom_role.yaml
@@ -192,6 +192,12 @@ rules:
 - apiGroups: [""]
   resources: ["serviceaccounts"]
   verbs: ["create", "patch", "get", "list", "watch", "delete"]
+- apiGroups: [""]
+  resources: ["pods/log"]
+  verbs: ["get", "list"]
+- apiGroups: ["security.openshift.io"]
+  resources: ["securitycontextconstraints"]
+  verbs: ["get", "list", "create", "update"]
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
