--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -12,5 +12,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: bhagyak1/bhagya-oprator
-  newTag: "19"
+  newName: ashima27/helmop
+  newTag: "31"
