--- a/config/samples/cache_v1_helmchart.yaml
+++ b/config/samples/cache_v1_helmchart.yaml
@@ -6,7 +6,7 @@ spec:
   helm-repo-name: aws-ebs-csi-driver
   helm-repo-url: https://kubernetes-sigs.github.io/aws-ebs-csi-driver
   helm-chart-name: aws-ebs-csi-driver
-  helm-chart-version: ""
+  helm-chart-version: "0.10.0"
   namespace: kube-system
   params:
 #    - name: "enableVolumeScheduling"
