--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -4,6 +4,7 @@
 resources:
 - bases/cache.example.com_bhagyatests.yaml
 - bases/cache.example.com_helmcharts.yaml
+- bases/cache.example.com_localoperators.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -11,12 +12,14 @@ patchesStrategicMerge:
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_bhagyatests.yaml
 #- patches/webhook_in_helmcharts.yaml
+#- patches/webhook_in_localoperators.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_bhagyatests.yaml
 #- patches/cainjection_in_helmcharts.yaml
+#- patches/cainjection_in_localoperators.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
