--- a/config/rbac/custom_role.yaml
+++ b/config/rbac/custom_role.yaml
@@ -206,7 +206,7 @@ rules:
   verbs: ["watch", "get", "list", "create", "delete"]
 - apiGroups: ["local.storage.openshift.io"]
   resources: ["localvolumes"]
-  verbs: ["watch", "get", "list", "create", "delete"]
+  verbs: ["watch", "get", "list", "create", "delete", "patch"]
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
